; ModuleID = '/home/carl/AnghaBench/redshift/src/extr_location-manual.c_location_manual_set_option.c'
source_filename = "/home/carl/AnghaBench/redshift/src/extr_location-manual.c_location_manual_set_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { float, float }

@errno = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [21 x i8] c"Malformed argument.\0A\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"lat\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"lon\00", align 1
@.str.3 = private unnamed_addr constant [33 x i8] c"Unknown method parameter: `%s'.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i8*, i8*)* @location_manual_set_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @location_manual_set_option(%struct.TYPE_5__* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca float, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 0, i64* @errno, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call float @strtof(i8* %10, i8** %8)
  store float %11, float* %9, align 4
  %12 = load i64, i64* @errno, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %19, label %14

14:                                               ; preds = %3
  %15 = load i8*, i8** %8, align 8
  %16 = load i8, i8* %15, align 1
  %17 = sext i8 %16 to i32
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %14, %3
  %20 = call i8* @_(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %21 = load i32, i32* @stderr, align 4
  %22 = call i32 @fputs(i8* %20, i32 %21)
  store i32 -1, i32* %4, align 4
  br label %48

23:                                               ; preds = %14
  %24 = load i8*, i8** %6, align 8
  %25 = call i64 @strcasecmp(i8* %24, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %32

27:                                               ; preds = %23
  %28 = load float, float* %9, align 4
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  store float %28, float* %31, align 4
  br label %47

32:                                               ; preds = %23
  %33 = load i8*, i8** %6, align 8
  %34 = call i64 @strcasecmp(i8* %33, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %35 = icmp eq i64 %34, 0
  br i1 %35, label %36, label %41

36:                                               ; preds = %32
  %37 = load float, float* %9, align 4
  %38 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 1
  store float %37, float* %40, align 4
  br label %46

41:                                               ; preds = %32
  %42 = load i32, i32* @stderr, align 4
  %43 = call i8* @_(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.3, i64 0, i64 0))
  %44 = load i8*, i8** %6, align 8
  %45 = call i32 @fprintf(i32 %42, i8* %43, i8* %44)
  store i32 -1, i32* %4, align 4
  br label %48

46:                                               ; preds = %36
  br label %47

47:                                               ; preds = %46, %27
  store i32 0, i32* %4, align 4
  br label %48

48:                                               ; preds = %47, %41, %19
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local float @strtof(i8*, i8**) #1

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i8* @_(i8*) #1

declare dso_local i64 @strcasecmp(i8*, i8*) #1

declare dso_local i32 @fprintf(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
